--- a/checkout.html
+++ b/checkout.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="titulo-header">
-            <a href="../index.html"><h1>iParadise<i class="fa-brands fa-apple"></i></h1></a> 
+            <a href="index.html"><h1>iParadise<i class="fa-brands fa-apple"></i></h1></a> 
         </div>
         <div class="nav-header">
             <nav>
